k8s/api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: pytexas
  labels:
    app: helloworld
  name: helloworld
spec:
  revisionHistoryLimit: 5
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
      - image: helloworld:v1
        imagePullPolicy: IfNotPresent
        name: helloworld
        # command: 
        # - uwsgi
        # - --ini
        # - /etc/uwsgi/uwsgi.ini
        # env:
        #   - name: DATABASE_URL
        #     value: postgresql://postgres:Ce8wazKrLp@full-mastiff-postgresql/postgres
        ports:
          - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /_healthz
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 15  # Check the ping every 15 seconds
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 2
        lifecycle:
          preStop:
            exec:
              # Do a graceful shutdown to killing current requests
              command: ["bash", "-c", "sleep 15 && kill -1 1 && sleep 60"]
        resources: {}
      restartPolicy: Always
status: {}
