k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: pytexas
  labels:
    app: helloworld
  name: helloworld
spec:
  type: NodePort
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    app: helloworld
status:
  loadBalancer: {}
